Bug 1917511 - Improve performance of childNodes. r=smaug

Child count is constant so we don't need the cache. Add a fast path for
uncached first / last node.

Differential Revision: https://phabricator.services.mozilla.com/D221511